# Medical-RAG-Chatbot

./: .gitignore  .gitmodules  Dockerfile  Jenkinsfile  README.md  docker-entrypoint.sh  k8s.yaml  pyproject.toml  requirements.txt
src/app/: application.py
src/app/common/: logger.py
src/app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
src/app/config/: config.py
